# mdvault

./: .gitignore  CLAUDE.md  README.md  SPEC.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_bench.py  autoresearch_gold.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
mdvault/: __init__.py  cli.py  db.py  indexer.py  mcp_server.py  memory.py  promoter.py  retriever.py  vault.py
skills/: mdvault.md
skills/mdvault/: SKILL.md
tests/: conftest.py  test_cli.py  test_db.py  test_indexer.py  test_memory.py  test_promoter.py  test_retriever.py  test_vault.py
tests/fixtures/databases/: postgres.md  redis.md  sqlite.md
tests/fixtures/dev/: ci_cd.md  containers.md  git.md  python.md  testing.md
tests/fixtures/infra/: docker.md  kubernetes.md  nginx.md  ssh.md  systemd.md  terraform.md
tests/fixtures/networking/: dns.md  load_balancing.md  tls.md
tests/fixtures/observability/: logging.md  prometheus.md  tracing.md
tests/fixtures/security/: authentication.md  firewall.md  secrets.md
