[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvault"
version = "0.1.0"
description = "CLI + MCP server for hybrid BM25 + semantic search over local Markdown vaults"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stephane Derosiaux" }]
keywords = ["markdown", "search", "mcp", "rag", "sqlite", "embeddings", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "model2vec",
    "sqlite-vec",
    "mcp",
    "typer",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/sderosiaux/mdvault"
Repository = "https://github.com/sderosiaux/mdvault"
Issues = "https://github.com/sderosiaux/mdvault"

[project.scripts]
mdvault = "mdvault.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
