[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdvault"
version = "0.1.0"
description = "CLI + MCP server for hybrid BM25 + semantic search over local Markdown vaults"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stephane Derosiaux" }]
keywords = ["markdown", "search", "mcp", "rag", "sqlite", "embeddings", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "model2vec",
    "sqlite-vec",
    "mcp",
    "typer",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/sderosiaux/mdvault"
Repository = "https://github.com/sderosiaux/mdvault"
Issues = "https://github.com/sderosiaux/mdvault"

[project.scripts]
mdvault = "mdvault.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (catch stray prints)
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
    "PLC",   # pylint conventions
    "PLE",   # pylint errors
    "PLW",   # pylint warnings
    "PIE",   # flake8-pie (misc bad practices)
    "C4",    # flake8-comprehensions
    "ISC",   # implicit string concat
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420 (implicit namespace packages)
    "TID",   # flake8-tidy-imports (ban relative imports, etc.)
    "TCH",   # flake8-type-checking (move type-only imports behind TYPE_CHECKING)
    "PERF",  # perflint (performance anti-patterns)
]
ignore = [
    "T201",    # allow print() in CLI
    "S603",    # subprocess calls — not relevant here
    "S607",    # partial executable path — not relevant here
    "INP001",  # implicit namespace — tests dir is fine
    "PLC0415", # lazy imports are intentional (heavy deps like model2vec)
    "S608",    # SQL "injection" via parameterized placeholders — false positive
    "S310",    # urlopen on hardcoded localhost — safe
    "SIM108",  # ternary for if/else assignment — less readable here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "S101"]  # assert is fine in tests

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
